objects/Bot_Command__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyEmail__c</fullName>
        <label>MyEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Invocation Pattern</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Utterance__c</fullName>
        <label>Sample Utterance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bot Command</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pattern__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Active__c</columns>
        <columns>Sample_Utterance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Regional_Dispatch_Bot_Command</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional Dispatch</label>
        <queue>Regional_Dispatch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Command Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Commands</pluralLabel>
    <recordTypes>
        <fullName>Test_Layout3</fullName>
        <active>true</active>
        <label>Test Layout3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_layout1</fullName>
        <active>true</active>
        <label>Test layout1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_layout2</fullName>
        <active>true</active>
        <label>Test layout2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>